# agent-wrappers

./: .gitignore  Audit of the Codex Wrapper and Coverage Gaps.docx.md  BACKLOG.md  CLI_MATRIX.md  Cargo.toml  Makefile  README.md  _claude_code_update_summary.md  _codex_cli_pr_body.md  _codex_cli_work_queue.md  aarch64-apple-darwin.json  audit-trio.report.json  capability_manifest.json  cohesion-audit.report.json  cohesion-audit.report.md  cohesion-audit.scan.json  concrete-audit.report.json  concrete-audit.report.md  concrete-audit.scan.json  contradictions-audit.report.json  contradictions-audit.report.md  contradictions-audit.scan.json  darwin-arm64.json  linux-x64.json  refactor_workplan.md  tasks.json  union.json  win32-x64.json  x86_64-pc-windows-msvc.json
crates/codex/: Cargo.toml  EXAMPLES.md  README.md
crates/codex/examples/: app_server_thread_turn.rs  app_server_turns.rs  bundled_binary_home.rs  cli_overrides.rs  cloud_tasks.rs  color_always.rs  env_binary.rs  feature_detection.rs  filter_rollout_event_msg.rs  image_json.rs  json_stream.rs  mcp_codex_flow.rs  mcp_codex_reply.rs  mcp_codex_tool.rs  mcp_manage.rs  no_stdout_mirror.rs  parse_rollout_jsonl.rs  quiet.rs  responses_api_proxy.rs  resume_apply.rs  select_model.rs  send_prompt.rs  stdio_to_uds_live.rs  stream_events.rs  stream_last_message.rs  stream_with_log.rs  timeout.rs  timeout_zero.rs  working_dir.rs  working_dir_json.rs
crates/codex/src/: builder.rs  client_core.rs  exec.rs  home.rs  jsonl.rs  lib.rs  mcp.rs  rollout_jsonl.rs  tests.rs  wrapper_coverage_manifest.rs
docs/: README.md  (+1 more)
(+662 files in other folders)
