[package]
name = "codex"
version = "0.2.0"
edition = "2021"
rust-version = "1.78"
description = "Async wrapper around the Codex CLI for programmatic prompting"
license = "MIT OR Apache-2.0"
keywords = ["codex", "cli", "wrapper", "agent"]
categories = ["api-bindings", "command-line-interface"]
readme = "README.md"

[dependencies]
futures-core = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.38", features = ["process", "io-util", "macros", "rt", "rt-multi-thread", "time", "sync", "fs"] }
thiserror = "1.0"
tracing = "0.1"
tempfile = "3.12"

[dev-dependencies]
futures-util = "0.3"
