[package]
name = "codex"
version = "0.2.0"
edition = "2021"
rust-version = "1.78"
description = "Async wrapper around the Codex CLI for programmatic prompting"
license = "MIT OR Apache-2.0"
keywords = ["codex", "cli", "wrapper", "agent"]
categories = ["api-bindings", "command-line-interface"]
readme = "README.md"

[dependencies]
futures-core = "0.3"
tokio = { workspace = true, features = ["process", "io-util", "io-std", "macros", "rt", "rt-multi-thread", "time", "sync", "fs"] }
thiserror = { workspace = true }
tracing = { workspace = true }
tempfile = { workspace = true }
serde_json = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
futures-util = "0.3"
